# scraper-blackrock-funds

./: .pre-commit-config.yaml  README.md  logs.conf  pyproject.toml
src/: main.py
src/utils/: helpers.py
